--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ngx-moment": "^6.0.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "vercel": "^33.4.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
