--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "licenser.author": "Guyutongxue",
-  "licenser.projectName": "pkuhelper-web-score",
+  "licenser.author": "Joonwoo Jang",
+  "licenser.projectName": "honeycourses-pku-scores",
   "licenser.license": "GPLv3"
 }
