--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@ngneat/until-destroy": "^9.2.1",
+    "@vercel/analytics": "^1.1.2",
     "daisyui": "^2.17.0",
     "moment": "^2.29.3",
     "ngx-moment": "^6.0.2",
